--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: generic
-dist: trusty
 matrix:
   include:
     - os: linux
+      dist: trusty
       addons:
         apt:
           sources:
@@ -10,7 +10,6 @@ matrix:
           packages:
             - g++-4.9
       env: >-
-        COMPILER_NAME=gcc
         CC=gcc-4.9
         CXX=g++-4.9
         BUILD_TYPE=Debug
@@ -18,6 +17,7 @@ matrix:
         TEST_TARGET=test
 
     - os: linux
+      dist: trusty
       addons:
         apt:
           sources:
@@ -25,7 +25,6 @@ matrix:
           packages:
             - clang-4.0
       env: >-
-        COMPILER_NAME=clang
         CC=clang-4.0
         CXX=clang++-4.0
         BUILD_TYPE=Debug
@@ -33,6 +32,7 @@ matrix:
         TEST_TARGET=test
 
     - os: linux
+      dist: trusty
       addons:
         apt:
           sources:
@@ -40,7 +40,6 @@ matrix:
           packages:
             - g++-4.9
       env: >-
-        COMPILER_NAME=gcc
         CC=gcc-4.9
         CXX=g++-4.9
         BUILD_TYPE=Debug
@@ -48,7 +47,13 @@ matrix:
         COVERALLS=ON
 
     - os: osx
-      compiler: clang
+      env: >-
+        CC=clang
+        CXX=clang++
+        BUILD_TYPE=Debug
+        TEST_TARGET=test
+        COVERALLS=OFF
+
 # we may need to install libcurl, valgrind, and the custom version of libcurl
 # that is built against gnutls.
 script:
